infrastructure/k8s/base/db-pool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: archiverse
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgres
